--- a/core/templates/emprestimo/finalizarEmprestimo.html
+++ b/core/templates/emprestimo/finalizarEmprestimo.html
@@ -8,7 +8,7 @@
 {% block conteudo %}
 <div class="container d-flex justify-content-center">
     <div class="card w-75 shadow h-100 py-2 ">
-        <h5 class="card-header">Encerar Emprestimo</h5>
+        <h5 class="card-header">Encerrar Emprestimo</h5>
 
         {% include 'alerts/messages.html' %}
         
