btn group fix abse.html table main

--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -221,7 +221,7 @@
                                                 {{emprestimo.data_devolucao}}
                                             {% endif %}</td>
 
-                                        <td class="btn-group text-center gap-1 col-lg-3">
+                                        <td class="btn btn-group text-center gap-1 col-lg-3">
                                             
                                             {% if emprestimo.status_emprestimo == "Aberto" %}
 
